--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,10 +17,10 @@ Software.
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1A73E8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MiBanana</title>
     <link
@@ -55,12 +55,14 @@ Software.
     />
     <script
       defer
-      data-site="YOUR_DOMAIN_HERE"
-      src="https://api.nepcha.com/js/nepcha-analytics.js"
-    ></script>
-  </head>
+      data-site="https://mibanana.com"
+      src="https://api.mibanana.com"
+      ></script>
+    </head>
+    <!-- data-site="YOUR_DOMAIN_HERE" -->
+    <!-- src="https://api.nepcha.com/js/nepcha-analytics.js" -->
 
-  <body>
+  <body style="background:#fff";>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
   </body>
